--- a/src/app/components/Exports/ExportDetailsView.module.css
+++ b/src/app/components/Exports/ExportDetailsView.module.css
@@ -1,5 +1,6 @@
 .container {
   width: 100%;
+  height: 100%;
   display: flex;
   position: relative;
   flex-direction: column;
@@ -8,6 +9,7 @@
   background-color: var(--color-dark-300);
   border-radius: var(--size-2);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  overflow: auto;
 }
 
 .header {
