--- a/src/app/components/Forms/CreateExportForm.module.css
+++ b/src/app/components/Forms/CreateExportForm.module.css
@@ -4,10 +4,21 @@
   padding: 1rem;
   border-radius: 1rem;
   display: flex;
+  position: relative;
   align-items: center;
   flex-direction: column;
   background-color: var(--color-dark-300);
-  position: relative;
+}
+
+.formContainer {
+  width: 100%;
+  max-width: 500px;
+  gap: var(--size-3);
+  border-radius: var(--size-1);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .container ul {
@@ -19,6 +30,7 @@
 .buttonContainer {
   gap: 1rem;
   width: 100%;
+  max-width: 500px;
   padding-top: 1rem;
   padding-bottom: 1rem;
   display: grid;
