--- a/src/app/components/JsonEditor/JsonEditor.module.css
+++ b/src/app/components/JsonEditor/JsonEditor.module.css
@@ -1,9 +1,9 @@
 .jsonEditorContainer {
-  display: flex;
   gap: var(--size-2);
   width: 100%;
   height: 300px;
-  /* Fixed height for the editor */
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 2fr));
   overflow: hidden;
 }
 
@@ -36,6 +36,7 @@
   color: var(--color-light-300);
   white-space: pre-wrap;
   word-break: break-all;
+  border: 1px solid transparent;
 }
 
 .syntaxHighlighting {
@@ -52,19 +53,19 @@
   word-break: break-all;
 }
 
-.textarea.invalid {
-  border: 1px solid var(--color-danger-200);
+.textarea:focus.valid {
+  border: 1px solid var(--color-primary);
 }
 
-.syntaxHighlighting.invalid {
-  background-color: var(--color-danger-500);
+.textarea.invalid {
+  border: 1px solid var(--color-danger-200);
 }
 
 .errorMessage {
   position: absolute;
   bottom: var(--size-1);
   left: var(--size-2);
-  color: var(--color-danger-200);
+  color: var(--color-danger-300);
   font-size: 0.8rem;
   z-index: 3;
 }
