--- a/src/app/components/Forms/CreateExportForm.module.css
+++ b/src/app/components/Forms/CreateExportForm.module.css
@@ -85,6 +85,93 @@
   aspect-ratio: 1/1;
 }
 
+.container {
+  width: 100%;
+  max-width: 100%;
+  padding: 1rem;
+  border-radius: 1rem;
+  display: flex;
+  position: relative;
+  align-items: center;
+  flex-direction: column;
+  background-color: var(--color-dark-300);
+}
+
+.formContainer {
+  width: 100%;
+  max-width: 500px;
+  gap: var(--size-3);
+  border-radius: var(--size-1);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.container ul {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.buttonContainer {
+  gap: 1rem;
+  width: 100%;
+  max-width: 500px;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+}
+
+.imgContainer {
+  width: 10rem;
+  height: 10rem;
+  padding: .2rem;
+  border-radius: 100%;
+  transition-duration: .3s;
+  display: flex;
+  border: dashed;
+  cursor: pointer;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  border-color: var(--color-dark-400);
+  background-color: var(--background-color-dark);
+}
+
+.imgContainer:hover {
+  border-color: var(--color-primary);
+}
+
+.plusContainer {
+  bottom: 0;
+  right: 1rem;
+  padding: .3rem;
+  border-radius: 100%;
+  display: flex;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--color-primary);
+}
+
+.previewImageContainer {
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+  display: flex;
+  overflow: hidden;
+  align-items: center;
+  justify-content: center;
+}
+
+.previewImage {
+  width: 100%;
+  object-fit: cover;
+  aspect-ratio: 1/1;
+}
+
 .fieldsSection {
   width: 100%;
   margin-top: 1.5rem;
@@ -152,7 +239,7 @@
   cursor: pointer;
   transition: background-color 0.3s ease;
   width: fit-content;
-  margin-top: 1rem;
+  margin-top: .5rem;
 }
 
 .addFieldButton:hover {
@@ -160,28 +247,33 @@
 }
 
 .inputModeToggle {
+  width: 100%;
+  margin-bottom: 1.5rem;
   display: flex;
   justify-content: center;
-  margin-bottom: 1.5rem;
-  gap: 1rem;
 }
 
 .toggleButton {
-  background-color: var(--color-dark-500);
-  color: var(--color-light-200);
+  gap: 1rem;
+  width: 100%;
   border: none;
-  border-radius: 4px;
-  padding: 0.75rem 1.5rem;
+  display: flex;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  justify-content: center;
+  color: var(--color-light-200);
+  background-color: var(--color-dark-400);
+  padding: 0.75rem 1.5rem;
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .toggleButton:hover {
-  background-color: var(--color-dark-400);
+  background-color: var(--color-dark-500);
 }
 
 .toggleButton.active {
-  background-color: var(--color-primary-500);
+  background-color: var(--color-primary);
+  color: var(--color-light-100);
+  font-weight: bold;
 }
 
 .jsonInputTextarea {
