--- a/src/app/components/Dashboard/MemberList.module.css
+++ b/src/app/components/Dashboard/MemberList.module.css
@@ -1,24 +1,34 @@
 .container {
   width: 100%;
-  max-width: 500px;
+  max-width: 1024px;
+  padding-top: 3rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.header {
+  gap: .5rem;
   display: flex;
   align-items: center;
   flex-direction: column;
 }
 
 .memberGrid {
-  gap: .5rem;
+  gap: 1rem;
+  padding: 0;
   width: 100%;
   display: flex;
-  flex-direction: column;
   list-style: none;
-  padding: 0;
+  flex-direction: column;
+  align-items: center;
 }
 
 .memberListItem {
   gap: 1rem;
   width: 100%;
   padding: 1rem;
+  max-width: 500px;
   border-radius: 1rem;
   padding-inline: 2rem;
   background-color: var(--color-dark-300);
@@ -32,7 +42,11 @@
 }
 
 .title {
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem; /* Adjust as needed */
+}
+
+.subtitle {
+  margin-bottom: 1rem; /* Adjust as needed */
 }
 
 .memberListItem.skeleton {
