--- a/src/app/components/Exports/ExportList.module.css
+++ b/src/app/components/Exports/ExportList.module.css
@@ -1,15 +1,15 @@
 .container {
-  width: 100%;
-  padding: 1rem;
-  display: flex;
-  justify-content: center;
-}
-
-.createContainer {
   gap: 1rem;
   width: 100%;
   max-width: 1024px;
-  padding-top: 2rem;
+  padding-top: 3rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.header {
+  gap: .5rem;
   display: flex;
   align-items: center;
   flex-direction: column;
