--- a/src/app/components/ProjectCharts/ProjectCharts.module.css
+++ b/src/app/components/ProjectCharts/ProjectCharts.module.css
@@ -10,10 +10,10 @@
   background-color: var(--color-dark-300);
   padding: 1.5rem;
   border-radius: 1rem;
-  display: flex;
   text-align: center;
-  align-items: center;
+  display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
 }
 
@@ -26,4 +26,10 @@
   width: 100%;
   height: 200px;
   border-radius: 1rem;
+}
+
+.chartWrapper {
+  position: relative;
+  height: 200px; /* Set a fixed height for the chart container */
+  width: 100%;
 }
