--- a/src/app/components/Exports/ExportDetailsView.module.css
+++ b/src/app/components/Exports/ExportDetailsView.module.css
@@ -7,7 +7,7 @@
   gap: var(--size-4);
   padding: var(--size-4);
   background-color: var(--color-dark-300);
-  border-radius: var(--size-2);
+  border-radius: 1rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
