--- a/src/app/components/Spinner/Spinner.module.css
+++ b/src/app/components/Spinner/Spinner.module.css
@@ -1,3 +1,15 @@
+.noBgSpinnerContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+}
+
 .spinnerContainer {
   position: absolute;
   top: 0;
@@ -13,8 +25,10 @@
 }
 
 .spinner {
-  border: 4px solid transparent; /* Light grey */
-  border-top: 4px solid var(--color-primary); /* Blue */
+  border: 4px solid transparent;
+  /* Light grey */
+  border-top: 4px solid var(--color-primary);
+  /* Blue */
   border-radius: 50%;
   width: 40px;
   height: 40px;
@@ -22,6 +36,11 @@
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
