--- a/src/app/components/Browser/Browser.module.css
+++ b/src/app/components/Browser/Browser.module.css
@@ -1,8 +1,9 @@
 .container {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
   background-color: var(--color-dark-400);
-  padding-bottom: 2rem;
 }
 
 .content {
