--- a/src/app/components/ProjectPresentation/ProjectPresentation.module.css
+++ b/src/app/components/ProjectPresentation/ProjectPresentation.module.css
@@ -23,7 +23,7 @@
 }
 
 @media screen and (max-width: 1024px) {
-  .container {
+  .header {
     flex-direction: column;
     justify-content: start;
     align-items: center;
@@ -124,17 +124,20 @@
 .borderAnimate {
   border: 2px solid var(--color-primary);
   position: relative;
-  overflow: hidden; /* Para que el pseudo-elemento no se desborde */
+  overflow: hidden;
+  /* Para que el pseudo-elemento no se desborde */
 }
 
 .borderAnimate::before {
   content: '';
   position: absolute;
   top: 0;
-  left: -100%; /* Empieza fuera del elemento */
+  left: -100%;
+  /* Empieza fuera del elemento */
   width: 100%;
   height: 100%;
-  background: linear-gradient(to right, transparent, var(--color-secondary), transparent); /* Gradiente de escaneo */
+  background: linear-gradient(to right, transparent, var(--color-secondary), transparent);
+  /* Gradiente de escaneo */
   animation: scanBorder 2s linear infinite;
 }
 
@@ -142,6 +145,7 @@
   0% {
     left: -100%;
   }
+
   100% {
     left: 100%;
   }
