--- a/src/app/components/Exports/ExportDetailsView.module.css
+++ b/src/app/components/Exports/ExportDetailsView.module.css
@@ -2,13 +2,13 @@
   width: 100%;
   min-height: 100%;
   display: flex;
-  position: relative;
   flex-direction: column;
   gap: var(--size-4);
   padding: var(--size-4);
   background-color: var(--color-dark-300);
   border-radius: 1rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  overflow-x: hidden;
 }
 
 .header {
@@ -24,9 +24,14 @@
 }
 
 .detailsGrid {
-  display: grid;
-  grid-template-columns: 1fr;
+  display: flex;
+  flex-direction: column;
   gap: var(--size-2);
+  width: 100%;
+  overflow: hidden;
+  text-align: start;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .detailsGrid p {
@@ -61,11 +66,12 @@
 .jsonViewer {
   background-color: var(--color-dark-900);
   padding: 1rem;
+  width: 100%;
+  display: flex;
   max-height: 80vh;
   border-radius: 1rem;
   overflow: auto;
   font-family: 'Fira Code', 'Consolas', 'Monaco', 'Andale Mono', 'Ubuntu Mono', monospace;
   font-size: 0.9rem;
   line-height: 1.4;
-  color: #e0e0e0;
 }
