--- a/src/app/components/ProjectPresentation/ProjectPresentation.module.css
+++ b/src/app/components/ProjectPresentation/ProjectPresentation.module.css
@@ -54,6 +54,14 @@
   grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
 }
 
+@media screen and (max-width: 720px) {
+  .buttonContainer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+}
+
 .imgContainer {
   width: 10rem;
   height: 10rem;
