--- a/src/app/components/Exports/ExportDetailsView.module.css
+++ b/src/app/components/Exports/ExportDetailsView.module.css
@@ -7,8 +7,8 @@
   padding: var(--size-4);
   background-color: var(--color-dark-300);
   border-radius: 1rem;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   overflow-x: hidden;
+  position: relative;
 }
 
 .header {
@@ -21,6 +21,12 @@
 .header h2 {
   color: var(--color-light-200);
   font-size: var(--size-9);
+}
+
+.actionButtons {
+  max-width: 500px;
+  display: flex;
+  gap: var(--size-2);
 }
 
 .detailsGrid {
