--- a/src/app/components/Forms/UpdateExportForm.module.css
+++ b/src/app/components/Forms/UpdateExportForm.module.css
@@ -203,12 +203,6 @@
   gap: 0.5rem;
 }
 
-.checkboxContainer input[type="checkbox"] {
-  width: 1.2rem;
-  height: 1.2rem;
-  accent-color: var(--color-primary-500);
-}
-
 .checkboxContainer label {
   color: var(--color-light-200);
   font-size: 0.9rem;
@@ -308,4 +302,11 @@
 .jsonInputTextarea:focus {
   outline: none;
   border-color: var(--color-primary-500);
+}
+
+.allowedOriginsContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  width: 100%;
 }
