--- a/src/app/components/Permissions/AllowedOriginsList.module.css
+++ b/src/app/components/Permissions/AllowedOriginsList.module.css
@@ -1,29 +1,71 @@
 .container {
+  width: 100%;
+  max-width: 1024px;
+  padding-top: 3rem;
   display: flex;
+  align-items: center;
   flex-direction: column;
-  gap: 1rem;
-  padding: 1rem;
-  background-color: var(--color-background-dark);
-  border-radius: 8px;
 }
 
-.originsGrid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 1rem;
+.header {
+  gap: .5rem;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.originCard {
-  background-color: var(--color-background-light);
+.subtitle {
+  margin-bottom: 1rem;
+}
+
+.originGrid {
+  gap: 1rem;
+  padding: 0;
+  width: 100%;
+  display: flex;
+  list-style: none;
+  flex-direction: column;
+  align-items: center;
+}
+
+.originListItem {
+  gap: 1rem;
+  width: 100%;
   padding: 1rem;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  word-break: break-all;
+  max-width: 500px;
+  border-radius: 1rem;
+  padding-inline: 2rem;
+  background-color: var(--color-dark-300);
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+}
+
+.originListItem:hover {
+  background-color: var(--color-dark-200);
+}
+
+.originIconContainer {
+  border-radius: 100%;
+  width: 32px;
+  aspect-ratio: 1/1;
+  border: solid 3px;
+  border-color: var(--color-button-primary-hover);
+  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
-  text-align: center;
-  min-height: 80px;
-  font-weight: 500;
-  color: var(--color-text-primary);
+  font-weight: 900;
+  color: white;
+  opacity: .7;
+  text-transform: uppercase;
+}
+
+.originText {
+  width: 100%;
+  overflow: hidden;
+  text-align: start;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
