--- a/src/app/components/Forms/CreateCredentialForm.module.css
+++ b/src/app/components/Forms/CreateCredentialForm.module.css
@@ -1,22 +1,44 @@
-.formContainer {
-  background-color: var(--bg-secondary);
-  border: 1px solid var(--border-color);
-  border-radius: var(--border-radius);
-  padding: 20px;
-  margin-top: 30px;
-}
-
-.formContainer h3 {
-  color: var(--text-primary);
-  margin-bottom: 20px;
-}
-
-.formContainer .labeledInput {
-  margin-bottom: 15px;
-}
-
-.formContainer button {
+.container {
   width: 100%;
-  padding: 10px;
-  font-size: 1rem;
+  max-width: 100%;
+  padding: 1rem;
+  border-radius: 1rem;
+  display: flex;
+  position: relative;
+  align-items: center;
+  flex-direction: column;
+  background-color: var(--color-dark-300);
+}
+
+.formContainer {
+  width: 100%;
+  max-width: 500px;
+  gap: var(--size-3);
+  border-radius: var(--size-1);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.formContainer h3,
+.formContainer p {
+  text-align: center;
+}
+
+.buttonContainer {
+  gap: 1rem;
+  width: 100%;
+  max-width: 500px;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+}
+
+@media screen and (max-width: 620px) {
+  .buttonContainer {
+    display: flex;
+    flex-direction: column;
+  }
 }
