--- a/src/app/components/Credentials/CredentialList.module.css
+++ b/src/app/components/Credentials/CredentialList.module.css
@@ -50,3 +50,15 @@
   border: dashed .2rem;
   justify-content: center;
 }
+
+.deleteButton {
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.deleteButton:hover {
+  color: var(--color-light-200);
+  background-color: transparent;
+}
